<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2013 FMSoft (http://www.fmsoft.cn)
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/add_alarm_bg"
    >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/map_clock"
        android:layout_marginBottom="@dimen/world_bottom_padding"
        android:contentDescription="@string/content_description"
        android:layout_alignParentBottom="true"
        />

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_tool_bar_title"
        >
         <Button
            android:id="@+id/return_btn"
            android:layout_width="50dip"
            android:layout_height="30dip"
            android:text="@string/returns"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/ic_button_1"
            style="@style/button_style"
            />

            <!-- <Button
            android:id="@+id/edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:textColor="#FFFFFF"
            android:background="@drawable/ic_button_3"
            /> -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/cur_deal_detail"
                style="@style/titleTextStyle"
                />
        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dip"
            android:background="@drawable/ic_button_add"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_layout"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
             android:orientation="vertical"  >
                <TextView
				android:id="@+id/goods_detail_title"
				android:layout_width="fill_parent"
				android:layout_height="30dip"/>    
           		<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seperator"
                android:textSize="20sp" />

            	<TextView
            	    android:id="@+id/goods_detail_info"
            	    android:layout_width="fill_parent"
            	    android:layout_height="110dp"
            	    android:textSize="20sp" />
				
            	<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seperator"
                android:textSize="20sp" />
            
            	<TextView
            	    android:id="@+id/source_detail_info"
            	    android:layout_width="fill_parent"
            	    android:layout_height="110dp"
            	    android:textSize="20sp"
            	    android:clickable="true"
            	    android:onClick="onClick" />
				
            	<Button
            	android:id="@+id/notify_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notify_source"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_shadow_clock"
            android:contentDescription="@string/content_description"
            />
</RelativeLayout>
