<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2013 FMSoft (http://www.fmsoft.cn)
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/add_alarm_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:src="@drawable/map_clock" />

	<TableLayout
                    android:id="@+id/profile_top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="75dp" >
            	<TableRow android:layout_width="match_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/phone"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="phone" />

                </TableRow>
                
            	<TableRow android:layout_width="match_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textWebPassword"/>
                </TableRow>
     </TableLayout>
    
    
     <Button
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/profile_top"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="5dp"
         android:gravity="center"
	     android:padding="5dp"
	     android:layout_marginTop="50dp"
	     android:background="@drawable/ic_button_green"
	     android:textSize="24sp"
	     android:textColor="@android:color/white"
         android:text="@string/login" />

     <Button
         android:id="@+id/forget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/profile_top"
         android:layout_alignParentRight="true"
         android:layout_marginRight="5dp"
         android:gravity="center"
         android:layout_marginTop="50dp"
	     android:padding="5dp"
	     android:background="@drawable/ic_button_green"
	     android:textSize="24sp"
	     android:textColor="@android:color/white"
	     android:text="@string/forget" />


</RelativeLayout>