<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2013 FMSoft (http://www.fmsoft.cn)
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/add_alarm_bg"
    >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/goods_title"
        android:src="@drawable/map_clock"
        android:layout_marginBottom="@dimen/world_bottom_padding"
        android:layout_alignParentBottom="true"
        />

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_tool_bar_title"
        >        

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/goods_title"
                style="@style/titleTextStyle"
                />
        
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_layout"
        android:orientation="vertical"
        >
       <!-- <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
             android:orientation="vertical"
            >
        <LinearLayout
            android:id="@+id/contentLayout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/white"
            >
        </LinearLayout>
        <ImageView
            android:id="@+id/top_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_shadow_clock_top"
            />
        </LinearLayout>-->
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TableLayout
                    android:id="@+id/goods_top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp" >

                    <TableRow android:layout_width="fill_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:text="@string/departure"
                            android:textSize="20sp" />
                        <EditText android:id="@+id/goods_departure"
                            android:layout_width="200dp"
                            android:layout_height="fill_parent"
                            android:inputType="text"
                            android:textSize="20sp"/>
<!-- 
                        <Spinner
                            android:id="@+id/goods_departure"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content" />
-->
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:text="@string/destination"
                            android:textSize="20sp" />
                        <EditText android:id="@+id/goods_destination"
                            android:layout_width="200dp"
                            android:layout_height="fill_parent"
                            android:inputType="text"
                            android:textSize="20sp"/>
<!-- 
                        <Spinner
                            android:id="@+id/goods_destination"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content" />
-->
                           </TableRow>
                </TableLayout>
<!-- 
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_type"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/goods_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_weight"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/goods_weight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text=""
                    android:textSize="20sp" />
 -->
                <Button
                    android:id="@+id/goods_searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/search"
                    android:textSize="20sp" >
                </Button>
            </LinearLayout>
        
        
    </ScrollView>
        <!--  <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_shadow_clock"
            />-->
</RelativeLayout>
